Fix tooltip z-index error

--- a/src/src/components/Tooltip/Tooltip.scss
+++ b/src/src/components/Tooltip/Tooltip.scss
@@ -3,7 +3,6 @@
 .tooltip {
   position: relative;
   display: inline-block;
-  z-index: 100;
   width: auto;
   height: auto;
   .tooltiptext {
